--- a/style.css
+++ b/style.css
@@ -19,23 +19,49 @@ form {
 .form h1 {
   text-align: left;
 }
+input[type=text] {
+  margin-bottom: 15px;
+  width: 300px;
+  height: 20px;
+  border: 1px solid lightgrey;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 255, .2);
+}
 input[type=text]:focus {
   border: lightblue;
+}
+input[type=email] {
+  margin-bottom: 15px;
+  width: 300px;
+  height: 20px;
+  border: 1px solid lightgrey;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 255, .2);
 }
 input[type=email]:focus {
   border: lightblue;
 }
 textarea {
   resize: none;
+  margin-bottom: 20px;
+  width: 600px;
+  height: 120px;
+  margin-bottom: 15px;
+  border: 1px solid lightgrey;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 255, .2);
 }
 textarea:focus {
   border: lightblue;
 }
 button {
   font-size: 18px;
+  padding: 2px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border: 1px solid lightgrey;
+  cursor: pointer;
 }
 button:hover {
-  font-size: 22px;
+  font-size: 20px;
   background-color: #2953c3;
   color: white;
+  border: none;
 }
